--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                   <br>
                                   <br>
                                   Curriculum vitae <a href="cv_4.pdf">[pdf]</a></br>
-                                  GitHub <a href="https://github.com/jovana-mitrovic">[profile]</a></br>
+                                  GitHub <a href="https://github.com/jovana-mitrovic">[profile]</a> &nbsp; (code from PhD projects soon to follow)</br>
                                   Google Scholar <a href="https://scholar.google.co.uk/citations?user=vRkNXhwAAAAJ&hl=en">[profile]</a></br>
 
                                  <!-- </div> -->
@@ -217,7 +217,7 @@
                                        <h3><a name="publications"><font color="black">Publications</font></a></h3>
                                    </div>
                                    <div class="pitems">
-                                     <div class="item mix tpaper mix_all" data-year="2013">
+
                                         <div class="pubmain">
                                             <div class="pubassets">
 
@@ -235,7 +235,8 @@
 
                                             <h4 class="pubtitle">DR-ABC: Approximate Bayesian Computation with Kernel-Based Distribution Regression</h4>
                                             <div class="pubauthor"><strong>Jovana Mitrovic</strong>, Dino Sejdinovic, Yee Whye Teh</div>
-                                            <div class="pubcite"><span class="label label-success">arXiv Paper</span> arXiv:1602.04805 </div>
+                                            <div class="pubcite"><span class="label label-success">arXiv preprint</span> arXiv:1602.04805, &nbsp; February 2016. <p>
+                                             <span style="display:inline-block; width: 6.4em;"></span> (Under review by the International Conference on Machine Learning (ICML)) </div>
 
                                         </div>
                                         <div class="pubdetails">
@@ -249,7 +250,7 @@
                                                In addition to that, our framework shows superior performance when compared to related methods on toy and real-world problems.
                                             </p>
                                         </div>
-                                     </div>
+
                                    </div>
                            </div>
                        </div>
