--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                   <br>
                                   <br>
                                   Curriculum vitae <a href="cv_4.pdf">[pdf]</a></br>
-                                  GitHub <a href="https://github.com/jovana-mitrovic">[profile]</a> &nbsp; (code from PhD projects soon to follow)</br>
+                                  GitHub <a href="https://github.com/jovana-mitrovic">[profile]</a> &nbsp; (code from PhD projects coming soon)</br>
                                   Google Scholar <a href="https://scholar.google.co.uk/citations?user=vRkNXhwAAAAJ&hl=en">[profile]</a></br>
 
                                  <!-- </div> -->
