--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                   <br>
                                   <br>
                                   Curriculum vitae <a href="cv_4.pdf">[pdf]</a></br>
-                                  GitHub <a href="https://github.com/jovana-mitrovic">[profile]</a> &nbsp; (code from PhD projects coming soon)</br>
+                                  GitHub <a href="https://github.com/jovana-mitrovic">[profile]</a> &nbsp; (code from PhD projects comign soon)</br>
                                   Google Scholar <a href="https://scholar.google.co.uk/citations?user=vRkNXhwAAAAJ&hl=en">[profile]</a></br>
 
                                  <!-- </div> -->
@@ -217,7 +217,7 @@
                                        <h3><a name="publications"><font color="black">Publications</font></a></h3>
                                    </div>
                                    <div class="pitems">
-
+                                     <div class="item mix tpaper mix_all" data-year="2013">
                                         <div class="pubmain">
                                             <div class="pubassets">
 
@@ -250,7 +250,7 @@
                                                In addition to that, our framework shows superior performance when compared to related methods on toy and real-world problems.
                                             </p>
                                         </div>
-
+                                     </div>
                                    </div>
                            </div>
                        </div>
