--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                   <br>
                                   <br>
                                   Curriculum vitae <a href="cv_4.pdf">[pdf]</a></br>
-                                  GitHub <a href="https://github.com/jovana-mitrovic">[profile]</a> &nbsp; (code from PhD projects comign soon)</br>
+                                  GitHub <a href="https://github.com/jovana-mitrovic">[profile]</a> &nbsp; (code from PhD projects coming soon)</br>
                                   Google Scholar <a href="https://scholar.google.co.uk/citations?user=vRkNXhwAAAAJ&hl=en">[profile]</a></br>
 
                                  <!-- </div> -->
@@ -175,16 +175,16 @@
 
                                            <li>
                                                <div class="dy">
-                                                   <span class="degree">PhD</span><span class="year">2014-Present</span>
+                                                   <span class="degree">PhD</span><span class="year">2014 - Present</span>
                                                </div>
                                                <div class="description">
                                                    <h5 class="waht"><b>Machine Learning</b></h5>
-                                                   <h4 class="where">University of Oxford, Department of Statistics</h4>
+                                                   <p class="where">University of Oxford, Department of Statistics</p>
                                                </div>
                                            </li>
                                            <li>
                                                <div class="dy">
-                                                   <span class="degree">M. Sc.</span><span class="year">2012-2014</span>
+                                                   <span class="degree">M. Sc.</span><span class="year">2012 - 2014</span>
                                                </div>
                                                <div class="description">
                                                    <h5 class="waht"><b>Applied Mathematics</b></h5>
@@ -193,7 +193,7 @@
                                            </li>
                                            <li>
                                                <div class="dy">
-                                                   <span class="degree">B. Sc.</span><span class="year">2009-2014</span>
+                                                   <span class="degree">B. Sc.</span><span class="year">2009 - 2014</span>
                                                </div>
                                                <div class="description">
                                                    <h5 class="waht"><b>Mathematics</b></h5>
