--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <img class="circular--square" src="images/me.png">
 
                             <div class="title">
-                                <h2>Jovana Mitrovic</h2>
+                                <h2>Jovana Mitrovi&#263</h2>
                                 <h3>University of Oxford</h3>
                                 <h3>Oxford, United Kingdom</h3>
                             </div>
