--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
                                            <li>
                                                <div class="dy">
-                                                   <span class="degree">Non-stipendiary Lecturer</span><span class="year">04/2016 - Present</span>
+                                                   <span class="degree">Junior College Lecturer</span><span class="year">04/2016 - Present</span>
                                                </div>
                                                <div class="description">
                                                    <p class="waht">Statistics and Data Analysis, Probability</p>
