--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                    </p>
                                   <br>
                                   <br>
-                                  Curriculum vitae <a href="cv_4.pdf">[pdf]</a></br>
+                                  Curriculum vitae <a href="cv(3).pdf">[pdf]</a></br>
                                   GitHub <a href="https://github.com/jovana-mitrovic">[profile]</a> &nbsp; (code from PhD projects coming soon)</br>
                                   Google Scholar <a href="https://scholar.google.co.uk/citations?user=vRkNXhwAAAAJ&hl=en">[profile]</a></br>
 
