--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                             </li>
 
                            <li>
-                            <a href="#employment">
+                            <a href="#professional">
                               <div class="icon icon-desktop"></div>
-                              <div class="text">Employment</div>
+                              <div class="text">Professional</div>
                             </a>
                           </li>
 
@@ -148,6 +148,7 @@
                                          <li> building kernel-type modules for neural networks, </li>
                                          <li> better understanding deep neural networks through a kernel perspective. </li>
                                       </ol>
+                                      Currently, I also use machine learning methods for causal discovery from observational data. 
                                    </p>
                                   <br>
                                   <br>
@@ -224,10 +225,10 @@
                                                 <a href="#" class="pubcollapse">
                                                     <i class="icon-plus toggleAbstract"></i>
                                                 </a>
-                                                <a href="http://arxiv.org/abs/1602.04805" class="tooltips" title="External link" target="_blank">
+                                                <a href="http://proceedings.mlr.press/v48/mitrovic16.html" class="tooltips" title="External link" target="_blank">
                                                     <i class="icon icon-external-link"></i>
                                                 </a>
-                                                <a href="pubs/1602.04805v1.pdf" title="Download" target="_blank">
+                                                <a href="http://jmlr.org/proceedings/papers/v48/mitrovic16.pdf" title="Download" target="_blank">
                                                     <i class="icon icon-cloud-download"></i>
                                                 </a>
 
@@ -236,7 +237,7 @@
                                             <h4 class="pubtitle">DR-ABC: Approximate Bayesian Computation with Kernel-Based Distribution Regression</h4>
                                             <div class="pubauthor"><strong>Jovana Mitrovic</strong>, Dino Sejdinovic, Yee Whye Teh</div>
                                             <div class="pubcite"><span class="label label-success">arXiv preprint</span> arXiv:1602.04805, &nbsp; February 2016. <p>
-                                             <span style="display:inline-block; width: 6.4em;"></span> (Under review by the International Conference on Machine Learning (ICML)) </div>
+                                             <span style="display:inline-block; width: 6.4em;"></span> ICML 2016 </div>
 
                                         </div>
                                         <div class="pubdetails">
@@ -252,6 +253,45 @@
                                         </div>
                                      </div>
                                    </div>
+
+                                   <div class="pitems">
+                                     <div class="item mix tpaper mix_all" data-year="2013">
+                                        <div class="pubmain">
+                                            <div class="pubassets">
+
+                                                <a href="#" class="pubcollapse">
+                                                    <i class="icon-plus toggleAbstract"></i>
+                                                </a>
+                                                <a href="https://openreview.net/forum?id=Bkiqt3Ntg&noteId=Bkiqt3Ntg" class="tooltips" title="External link" target="_blank">
+                                                    <i class="icon icon-external-link"></i>
+                                                </a>
+                                                <a href="https://openreview.net/pdf?id=Bkiqt3Ntg" title="Download" target="_blank">
+                                                    <i class="icon icon-cloud-download"></i>
+                                                </a>
+
+                                            </div>
+
+                                            <h4 class="pubtitle">Deep Kernel Machines via the Kernel Reparametrization Trick</h4>
+                                            <div class="pubauthor"><strong>Jovana Mitrovic</strong>, Dino Sejdinovic, Yee Whye Teh</div>
+                                             <span style="display:inline-block; width: 6.4em;"></span> Workshop Track ICLR 2017 </div>
+
+                                        </div>
+                                        <div class="pubdetails">
+                                            <h4>Abstract</h4>
+                                            <p>
+                                               While deep neural networks have achieved state-of-the-art performance on many
+                                               tasks across varied domains, they still remain black boxes whose inner workings
+                                               are hard to interpret and understand. In this paper, we develop a novel method for
+                                               efficiently capturing the behaviour of deep neural networks using kernels. In par-
+                                               ticular, we construct a hierarchy of increasingly complex kernels that encode indi-
+                                               vidual hidden layers of the network. Furthermore, we discuss how our framework
+                                               motivates a novel supervised weight initialization method that discovers highly
+                                               discriminative features already at initialization.
+                                            </p>
+                                        </div>
+                                     </div>
+                                   </div>
+
                            </div>
                        </div>
                    </div>
@@ -261,33 +301,32 @@
                             <div class="section-container">
                                 <div class="row">
 
-                                    <div id="Employment">
+                                    <div id="Professional">
                                         <div class="title text-center">
-                                            <h3><a name="employment"><font color="black">Employment</font></a></h3>
+                                            <h3><a name="professional"><font color="black">Professional</font></a></h3>
                                         </div>
                                         <ul class="ul-card">
 
                                            <li>
                                                <div class="dy">
-                                                   <span class="degree">Junior College Lecturer</span><span class="year">04/2016 - Present</span>
+                                                   <span class="degree">Research Intern</span><span class="year">to start in June 2017</span>
                                                </div>
                                                <div class="description">
-                                                   <p class="waht">Statistics and Data Analysis, Probability</p>
-                                                   <p class="where">University of Oxford, University College</p>
+                                                   <p class="where">DeepMind. London, UK</p>
                                                </div>
                                            </li>
 
                                            <li>
                                                <div class="dy">
-                                                   <span class="degree">Tutor</span><span class="year">01/2016 - Present</span>
+                                                   <span class="degree">Research Intern</span><span class="year">08/2016-11/2016</span>
                                                </div>
                                                <div class="description">
-                                                   <p class="waht">Probability, Applied Statistics</p>
-                                                   <p class="where">University of Oxford, Hertford College</p>
+                                                   <p class="waht">Supervisors: Yoshua Bengio and Aaron Courville</p>
+                                                   <p class="where">MILA, University of Montreal, Canada</p>
                                                </div>
                                            </li>
 
-                                           <li>
+                                           <!-- <li>
                                                <div class="dy">
                                                    <span class="degree">Class Tutor and Teaching Assistant</span><span class="year">02/2016 - 03/2016</span>
                                                </div>
@@ -322,7 +361,7 @@
                                                     <p class="waht">Numerical Methods for Engineers, Complex Analysis, Numerical Mathematics II</p>
                                                     <p class="where">ETH Zurich, Department of Mathematics</p>
                                                 </div>
-                                            </li>
+                                            </li> -->
 
                                         </ul>
 
