--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                          <li> building kernel-type modules for neural networks, </li>
                                          <li> better understanding deep neural networks through a kernel perspective. </li>
                                       </ol>
-                                      Currently, I also use machine learning methods for causal discovery from observational data. 
+                                      Currently, I also use machine learning methods for causal discovery from observational data.
                                    </p>
                                   <br>
                                   <br>
@@ -217,6 +217,7 @@
                                    <div class="title text-center">
                                        <h3><a name="publications"><font color="black">Publications</font></a></h3>
                                    </div>
+
                                    <div class="pitems">
                                      <div class="item mix tpaper mix_all" data-year="2013">
                                         <div class="pubmain">
@@ -290,7 +291,7 @@
                                             </p>
                                         </div>
                                      </div>
-                                   </div>
+                                   <!-- </div> -->
 
                            </div>
                        </div>
@@ -467,6 +468,6 @@
                 </div>
 
             </div>
-        </div>
+        <!-- </div> -->
     </body>
 </html>
