--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
             <div id="main">
 
                 <div id="aboutme" class="page home" data-pos="home">
+
                     <div class="pageheader">
                         <div class="headercontent">
                             <div class="section-container">
@@ -294,7 +295,7 @@
 
                            </div>
                        </div>
-                   </div>
+                   <!-- </div> -->
 
                    <div class="pagecontents">
                         <div class="section color-1">
@@ -368,7 +369,7 @@
                                     </div>
                                 </div>
                             </div>
-
+                          </div>
                         </div>
 
                         <div class="section color-2">
@@ -466,7 +467,7 @@
                     </div>
                 </div>
 
-            </div>
+            <!-- </div> -->
         <!-- </div> -->
     </body>
 </html>
