--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                           </li>
 
                             <li>
-                              <a href="cv_4.pdf">
+                              <a href="cv(3).pdf">
                                   <div class="icon icon-download-alt"></div>
                                   <div class="text">Download CV</div>
                               </a>
@@ -253,7 +253,6 @@
                                             </p>
                                         </div>
                                      </div>
-                                   </div>
 
                                    <div class="pitems">
                                      <div class="item mix tpaper mix_all" data-year="2013">
@@ -291,7 +290,7 @@
                                             </p>
                                         </div>
                                      </div>
-                                   <!-- </div> -->
+                                   </div>
 
                            </div>
                        </div>
